<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vibracao"
            android:textSize="15sp"
            android:textColor="@color/colorTextPrimary"
            android:layout_marginBottom="10dp"/>

        <CheckBox
            android:id="@+id/vibrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vibrar"
            android:checked="true"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#999" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tempo_de_snooze"
            android:textSize="15sp"
            android:textColor="@color/colorTextPrimary"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/snooze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#999" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecao_de_musica"
            android:textSize="15sp"
            android:textColor="@color/colorTextPrimary"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/spinmusicas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#999" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</LinearLayout>

