<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wiltbr.despertador.MainActivity"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/imagerel"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_alarm_black_24dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"/>

        <ImageView
            android:clickable="true"
            android:id="@+id/excBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_delete_forever_black_24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/alarme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hora"
            android:textSize="100sp"
            android:textColor="#000"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nivel_de_cansaco"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textAlignment="center"/>

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radioButtonMedio"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:id="@+id/radioButtonPouco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pouco"
                android:textColor="@android:color/white"/>

            <RadioButton
                android:id="@+id/radioButtonMedio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moderado"
                android:textColor="@android:color/white"/>

            <RadioButton
                android:id="@+id/radioButtonMuito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muito"
                android:textColor="@android:color/white"/>

        </RadioGroup>

        <Button
            android:id="@+id/BtnDeitei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pronto"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>

    </LinearLayout>


</LinearLayout>
