<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

            <ImageView
                android:id="@+id/imagerel"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_alarm_on_black_24dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"/>

            <TextView
                android:id="@+id/horaatt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hora"
                android:textSize="100sp"
                android:textColor="#000"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnSnooze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soneca"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_weight="2"
            android:layout_marginTop="15dp"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desligar_alarme"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_weight="1"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

</LinearLayout>